# MPI_EXP

./: CMakeLists.txt  PSRS.c  experiment_document.docx  fast_sort_single.c  gen_data.c  hello_mpi.c  host  odd_even_sort_para.c  readme.md  serial_code.c  test.sh
include/: setting.h  sort.h  utils.h
scripts/: download_environment.sh
src/: setting.c  sort.c  utils.c
test/: CMakeLists.txt  hello_mpi.c  send_recv.c  test_send_recv_large.c
